--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script type="text/javascript" src="js/js.js"></script>
     <meta charset="UTF-8">
     <title>Soy Maria</title>
 </head>
